syntax = "proto3";

package network;

// Network scanning service
service NetworkScanner {
  rpc ScanNetwork (NetworkScanRequest) returns (stream NetworkScanResponse);
}

message NetworkScanRequest {
  repeated string ip_addresses = 1; // e.g., ["192.168.1.1", "10.0.0.5"]
  repeated uint32 ports = 2;        // If empty, use a default list or scan all
  bool detect_services = 3;         // Do banner grabbing or guess service
  bool full_scan = 4;               // Scan all 65535 ports (optional)
}

message RmapPort {
  uint32 port = 1;
  string protocol = 2;
  string service = 3;
  string state = 4; // open, closed, filtered
  string version = 5; // optional
}

message HostScanResult {
  string host = 1;
  string hostname = 2;
  string status = 3;
  repeated RmapPort ports = 4;
  string os = 5;
  string last_seen = 6;
  string risk = 7;
}

message NetworkScanResponse {
  repeated HostScanResult results = 1;
  string total = 2; // Total number of hosts scanned
  string scanned = 3; // Number of hosts scanned
}